--- a/.posh-config.json
+++ b/.posh-config.json
@@ -1,9 +1,16 @@
 {
   "$schema": "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json",
+  "osc7": true,
   "blocks": [
     {
       "alignment": "left",
       "segments": [
+        {
+          "type": "text",
+          "style": "plain",
+          "foreground": "#C678DD",
+          "template": "{{ .Env.WEZTERM_TAB }} > "
+        },
         {
           "foreground": "#56B6C2",
           "properties": {
